🧹 Update .gitignore to ignore .venv and logs/

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,12 @@ __pycache__/
 /staticfiles/
 /media/
 node_modules/
+
+# Local virtual environment
+.venv/
+
+# Per-user logs
+logs/
+
+# macOS
+.DS_Store
